# fastapi_ml

./: main.py  pyproject.toml
